split number card